--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* simplify-rtx.c (simplify_plus_minus): Bump n_ops for NOT.
+	Don't allow -1 - x -> ~x simplifications in the first pass.
+
 2002-01-07  Aldy Hernandez  <aldyh@redhat.com>
 
         * rs6000.c (altivec_expand_ternop_builtin): Don't die on invalid
