--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20020107-1.c: New test.
+
 2002-01-06  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	PR c/5279
