* unwind-dw2.c (execute_cfa_program): Use < again.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48617 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-07  Jason Merrill  <jason@redhat.com>
+
+	* unwind-dw2.c (execute_cfa_program): Use < again.
+
 2002-01-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* predict.c (combine_predictions_for_insn): Avoid division by zero.
