--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-07  Richard Henderson  <rth@redhat.com>
+
+	* config/rs6000/xcoff.h (ASM_FILE_START): Reverted to profile_flag.
+
 2002-01-07  Jason Merrill  <jason@redhat.com>
 
 	* unwind-dw2.c (execute_cfa_program): Use < again.
