2002-01-07  Aldy Hernandez  <aldyh@redhat.com>
        * rs6000.c (bdesc_2arg): Add altivec predicates.

        * rs6000.c (print_operand): Remove extra space.
        (altivec_expand_unop_builtin): Fix thinko.
        (altivec_expand_binop_builtin): Same.
        (altivec_expand_ternop_builtin): Same.
        (altivec_expand_builtin): Same.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48620 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-07  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.c (print_operand): Remove extra space.
+        (altivec_expand_unop_builtin): Fix thinko.
+        (altivec_expand_binop_builtin): Same.
+        (altivec_expand_ternop_builtin): Same.
+        (altivec_expand_builtin): Same.
+
 2002-01-07  Richard Henderson  <rth@redhat.com>
 
 	* config/rs6000/xcoff.h (ASM_FILE_START): Reverted to profile_flag.
