--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,14 @@
-002-01-07  Aldy Hernandez  <aldyh@redhat.com>
+2002-01-07  Richard Henderson  <rth@redhat.com>
+
+	* regrename.c (find_oldest_value_reg): Ignore the value chain if
+	the original register was copied in a mode with a fewer number of
+	hard registers than the desired mode.
+	(copyprop_hardreg_forward_1): Likewise.
+	(debug_value_data): Fix loop test.
+	* toplev.c (parse_options_and_default_flags): Reenable
+	-fcprop-registers at -O1.
+
+2002-01-07  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/rs6000/rs6000.c (bdesc_2arg): Add altivec predicates.
         (altivec_init_builtins): New node v4si_ftype_v16qi_v16qi.
