If a symbol ref is in the constant pool, use the pool's version of the symbol instead.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48625 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-08  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* dbxout.c (dbxout_symbol_location): If a symbol ref is in the
+	constant pool, use the pool's version of the symbol instead.
+
 2002-01-07  Richard Henderson  <rth@redhat.com>
 
 	* regrename.c (find_oldest_value_reg): Ignore the value chain if
