* debug.h: Use "tree" and "rtx" throughout.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48629 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-08  Graham Stott  <grahams@redhat.com>
+
+	* debug.h: Use "tree" and "rtx" throughout.
+
+	* debug.c: Likewise.
+
 2002-01-08  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* dbxout.c (dbxout_symbol_location): If a symbol ref is in the
