--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-08  Graham Stott  <grahams@redhat.com>
 
+	* combine.c (combine_instructions): Fix typo.
+
+2002-01-08  Graham Stott  <grahams@redhat.com>
+
 	* debug.h: Use "tree" and "rtx" throughout.
 
 	* debug.c: Likewise.
