* gcc.c (option_map): Remove --version. 	(process_command): Handle -fversion following the GNU Coding 	Standards.  Partially addresses PR other/704.
f:
	* g77spec.c (lookup_option): Handle -fversion.
	(lang_specific_driver): Update copyright date in --version output.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48631 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-08  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.c (option_map): Remove --version.
+	(process_command): Handle -fversion following the GNU Coding
+	Standards.  Partially addresses PR other/704.
+
 2002-01-08  Graham Stott  <grahams@redhat.com>
 
 	* combine.c (combine_instructions): Fix typo.
