--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,53 @@
+2002-01-08  Graham Stott  <grahams@redhat.com>
+
+	* xref.c (FILE_NAME_ABSOLUTE_P): Add parenthesis.
+	(PALLOC): Uppercase macro parameter and whitespace.
+	(SALLOC): Uppercase macro parameter.
+	(SFREE): Uppercase macros parameter, add parenthese and
+	whitespace.
+	(STREQL): Uppercase macro parameter and whitespace.
+	(STRNEQ): Likewise.
+	(STRLSS): Likewise.
+	(STRLEQ): Likewise.
+	(STRGTR): Likewise.
+	(STRGEQ): Likewise.
+
+	* call.c (convert_like): Add parenthesis and wrap.
+	(convert_like_with_context): Likewise.
+	(ICS_RANK): Whitespace.
+	(NEED_TEMPORARY_P): Remove parenthesis.
+
+	* class.c (VTT_TOP_LEVEL_P): Uppercase macro parameter and
+	whitespace.
+	(VTT_MARKED_BINFO_P): Likewise.
+
+	* decl.c (BINDING_LEVEL): Add parenthesis.
+	(DEF_OPERATOR): Likewise.
+
+	* errors.c (print_scope_operator): Add parenthesis.
+	(print_left_paren): Likewise.
+	(print_right_paren): Likewise.
+	(print_left_bracket): Likewise.
+	(print_right_bracket): Likewise.
+	(print_template_argument_list_start): Likewise.
+	(print_template_argument_list_end): Likewise.
+	(print_non_consecutive_character): Likewise.
+	(print_tree_identifier): Likewise.
+	(print_identifier): Likewise.
+	(NEXT_CODE): Uppercase macro parameter.
+	(ident_fndecl): Delete unused.
+	(GLOBAL_THING): Likewise.
+
+	* mangle.c (MANGLE_TRACE): Add parenthesis.
+	(MANGLE_TRACE_TREE): Likewise.
+	(write_signed_number): Likewise.
+	(write_unsigned_number): Likewise.
+
+	* pt.c (ccat): Uppercase macro parameter.
+	(cat): Likewise
+
+	* search.c (SET_BINFO_ACCESS): Add parenthesis.
+
 2002-01-07  Jason Merrill  <jason@redhat.com>
 
 	* decl2.c (coerce_new_type): Downgrade error for size_t mismatch
