--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-08  Geoff Keating  <geoffk@redhat.com>
+
+	* gcc.dg/altivec-4.c: Make the 'char' entries signed also for
+	consistency.
+
 002-01-07  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.dg/altivec-4.c: Test altivec predicates.
