--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -3153,7 +3153,10 @@
   [(set (match_operand:DI 0 "register_operand" "=d")
         (plus:DI (match_operand:DI 1 "general_operand" "g")
                  (match_operand:DI 2 "general_operand" "g")))]
-  "TARGET_64BIT && reload_in_progress"
+  "TARGET_64BIT && reload_in_progress
+   && !address_operand (gen_rtx_PLUS (DImode, operands[1], operands[2]), QImode)
+   && !rtx_equal_p (operands[0], operands[1])
+   && !rtx_equal_p (operands[0], operands[2])"
   "#")
 
 (define_split
@@ -3172,7 +3175,6 @@
       && !legitimate_reload_constant_p (operands[1]))
     operands[1] = force_const_mem (DImode, operands[1]);
 }")
-
 
 (define_split
   [(set (match_operand:DI 0 "register_operand" "")
@@ -3297,7 +3299,10 @@
   [(set (match_operand:SI 0 "register_operand" "=d")
         (plus:SI (match_operand:SI 1 "general_operand" "g")
                  (match_operand:SI 2 "general_operand" "g")))]
-  "reload_in_progress"
+  "reload_in_progress
+   && !address_operand (gen_rtx_PLUS (SImode, operands[1], operands[2]), QImode)
+   && !rtx_equal_p (operands[0], operands[1])
+   && !rtx_equal_p (operands[0], operands[2])"
   "#")
 
 (define_split
@@ -3333,7 +3338,7 @@
       && !legitimate_reload_constant_p (operands[2]))
     operands[2] = force_const_mem (SImode, operands[2]);
 }")
- 
+
 
 ;
 ; addhi3 instruction pattern(s).
