2002-01-08  H.J. Lu <hjl@gnu.org>
	* objc.dg/special/special.exp: Add -I${srcdir}/../../libobjc
	for header files.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48647 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-08  H.J. Lu <hjl@gnu.org>
+
+	* objc.dg/special/special.exp: Add -I${srcdir}/../../libobjc
+	for header files.
+
 2002-01-08  Geoff Keating  <geoffk@redhat.com>
 
 	* gcc.dg/altivec-4.c: Make the 'char' entries signed also for
