* config/rs6000/rs6000.md: Add missing int register         target case to movdf_low.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48653 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-08  Dale Johannesen  <dalej@apple.com>
+
+	* config/rs6000/rs6000.md: Add missing int register
+	target case to movdf_low.
+
 2002-01-08  Zack Weinberg  <zack@codesourcery.com>
 
 	* Makefile.in (cs-tconfig.h): Don't depend on $(CONFIG_H) or
