--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-08  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/invoke.texi: Markup gcc as @command.  Refer to
+	http://gcc.gnu.org/onlinedocs/gcc/Contributors.html instead
+	of http://gcc.gnu.org/thanks.html.
+
 2002-01-08  Dale Johannesen  <dalej@apple.com>
 
 	* config/rs6000/rs6000.md: Add missing int register
