--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-07  Andreas Tobler <a.tobler@schweiz.ch>
+
+	* java/lang/reflect/natMethod.cc: Don't include alloca.h.
+	(_Jv_CallAnyMethodA): Convert alloca to __builtin_alloca.
+
 2002-01-08  Chris Sears  <cbsears_sf@yahoo.com>
 
 	* interpret.cc (ARRAYBOUNDSCHECK): New macro.
