* expr.c (store_expr): Convert VOIDmode constants back to target's 	mode.
	* gcc.dg/20020108-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48658 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* expr.c (store_expr): Convert VOIDmode constants back to target's
+	mode.
+
 2002-01-08  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/invoke.texi: Markup gcc as @command.  Refer to
