--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020108-1.c: New test.
+
 2002-01-08  H.J. Lu <hjl@gnu.org>
 
 	* objc.dg/special/special.exp: Add -I${srcdir}/../../libobjc
