* Makefile.in (toplev.o): Depend on options.h.         (gcc.o): Depend on specs.h.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48659 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-08  Richard Henderson  <rth@redhat.com>
+
+	* Makefile.in (toplev.o): Depend on options.h.
+	(gcc.o): Depend on specs.h.
+
 2002-01-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* expr.c (store_expr): Convert VOIDmode constants back to target's
