* resolve.cc (_Jv_PrepareClass): Enable verifier.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48660 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-08  Tom Tromey  <tromey@redhat.com>
+
+	* resolve.cc (_Jv_PrepareClass): Enable verifier.
+
 2002-01-07  Andreas Tobler <a.tobler@schweiz.ch>
 
 	* java/lang/reflect/natMethod.cc: Don't include alloca.h.
