--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -365,7 +365,7 @@
 
 (define_insn "*cmpdi_ccu_mem"
   [(set (reg 33)
-        (compare (match_operand:DI 0 "s_imm_operand" "oQ")
+        (compare (match_operand:DI 0 "s_operand" "oQ")
                  (match_operand:DI 1 "s_imm_operand" "oQ")))]
   "s390_match_ccmode(insn, CCUmode)"
   "clc\\t%O0(8,%R0),%1"
@@ -515,7 +515,7 @@
 
 (define_insn "*cmpsi_ccu_mem"
   [(set (reg 33)
-        (compare (match_operand:SI 0 "s_imm_operand" "oQ")
+        (compare (match_operand:SI 0 "s_operand" "oQ")
                  (match_operand:SI 1 "s_imm_operand" "oQ")))]
   "s390_match_ccmode(insn, CCUmode)"
   "clc\\t%O0(4,%R0),%1"
@@ -584,7 +584,7 @@
 
 (define_insn "*cmphi_ccu_mem"
   [(set (reg 33)
-        (compare (match_operand:HI 0 "s_imm_operand" "oQ")
+        (compare (match_operand:HI 0 "s_operand" "oQ")
                  (match_operand:HI 1 "s_imm_operand" "oQ")))]
   "s390_match_ccmode(insn, CCUmode)"
   "clc\\t%O0(2,%R0),%1"
@@ -706,7 +706,7 @@
 
 (define_insn "*cmpqi_ccu_mem"
   [(set (reg 33)
-        (compare (match_operand:QI 0 "s_imm_operand" "oQ")
+        (compare (match_operand:QI 0 "s_operand" "oQ")
                  (match_operand:QI 1 "s_imm_operand" "oQ")))]
   "s390_match_ccmode(insn, CCUmode)"
   "clc\\t%O0(1,%R0),%1"
