--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-08  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (jv_convert_LDADD): Removed convert_source_files.
+
 2002-01-08  Nic Ferrier  <nferrier@tf1.tapsellferrier.co.uk> 
 
 	* java/net/natPlainSocketImpl.cc: Added timeout handling for
