--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,28 @@
+2002-01-08  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/tm.texi (EASY_DIV_EXPR, IMPLICIT_FIX_EXPR,
+	LONGJMP_RESTORE_FROM_STACK, MAX_INT_TYPE_SIZE): Remove
+	documentation of obsolete macros.
+	* system.h: Poison these macros.
+	* config/1750a/1750a.h, config/a29k/a29k.h, config/alpha/alpha.h,
+	config/arc/arc.h, config/arm/arm.h, config/avr/avr.h,
+	config/c4x/c4x.h, config/clipper/clipper.h,
+	config/convex/convex.h, config/cris/cris.h, config/d30v/d30v.h,
+	config/dsp16xx/dsp16xx.h, config/elxsi/elxsi.h,
+	config/fr30/fr30.h, config/h8300/h8300.h, config/i370/i370.h,
+	config/i386/i386.h, config/i860/i860.h, config/i960/i960.h,
+	config/ia64/ia64.h, config/m32r/m32r.h, config/m68hc11/m68hc11.h,
+	config/m68k/m68k.h, config/m88k/m88k.h, config/mcore/mcore.h,
+	config/mips/mips.h, config/mmix/mmix.h, config/mn10200/mn10200.h,
+	config/mn10300/mn10300.h, config/ns32k/ns32k.h, config/pa/pa.h,
+	config/pdp11/pdp11.h, config/pj/pj.h, config/romp/romp.h,
+	config/rs6000/rs6000.h, config/s390/s390.h, config/sh/sh.h,
+	config/sparc/sparc.h, config/stormy16/stormy16.h,
+	config/v850/v850.h, config/vax/vax.h, config/we32k/we32k.h: Remove
+	definitions and commented out definitions of obsolete macros.
+	* config/mips/iris5.h (MAX_WCHAR_TYPE_SIZE): Don't define in terms
+	of MAX_INT_TYPE_SIZE.
+
 2002-01-08  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (s390_preferred_reload_class): Never
