--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-09  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
+
+	* config/c4x/c4x/md: Remove extraneous constraints from define_splits.
+
 2002-01-08  Richard Henderson  <rth@redhat.com>
 
 	* regrename.c (copy_value): Ignore overlapping copies.
