--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-09  Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>
+
+	* config/c4x/c4x.h: Use PUSH_ARGS and PUSH_ROUNDING for stack passing.
+
 2002-01-09  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
 	* config/c4x/c4x/md: Remove extraneous constraints from define_splits.
