--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* ginclude/stddef.h: Define _BSD_WCHAR_T_DEFINED_ if _BSD_WCHAR_T_
+	gets undefined. For Darwin.
+
 2002-01-09  Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>
 
 	* config/c4x/c4x.h: Use PUSH_ARGS and PUSH_ROUNDING for stack passing.
