--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-09  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa.md (decrement_and_branch_until_zero): Change predicate for
+	operand 0 from register_operand to reg_or_nonsymb_mem_operand.
+
 2002-01-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* ginclude/stddef.h: Define _BSD_WCHAR_T_DEFINED_ if _BSD_WCHAR_T_
