* semantics.c (FINISH_COND): Uppercase macro paramaters and         add parenthesis.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48674 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-09  Graham Stott  <grahams@redhat.com>
+
+	* semantics.c (FINISH_COND): Uppercase macro paramaters and
+	add parenthesis.
+
 2002-01-08  Graham Stott  <grahams@redhat.com>
 
 	* xref.c (FILE_NAME_ABSOLUTE_P): Add parenthesis.
