--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-09  Graham Stott  <grahams@redhat.com>
 
+	* decl.h ( grokdeclarator): Wrap long line.
+
 	* semantics.c (FINISH_COND): Uppercase macro paramaters and
 	add parenthesis.
 
