--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-01-09  Richard Henderson  <rth@redhat.com>
 
+	* config/m32r/m32r.c (move_src_operand): Fix 32-bit int test.
+	* config/m32r/m32r.md (and ior xor splitters): Swap operands
+	to match insn patterns.
+
+2002-01-09  Richard Henderson  <rth@redhat.com>
+
 	* regrename.c (find_oldest_value_reg): Use gen_rtx_raw_REG.
 	(copyprop_hardreg_forward_1): Likewise.
 
