--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-09  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020109-1.c: New test.
+
 2002-01-08  Kazu Hirata  <kazu@hxi.com>
 
 	* gcc.c-torture/execute/20020108-1.c: New test.
