--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-09  Herman A.J. ten Brugge  <Haj.Ten.Brugge@net.HCC.nl>
+
+        * real.c (c4xtoe, toc4x): Do some special conversion on long doubles
+        for the c4x target. Also improve layout.
+
 2002-01-09  Richard Henderson  <rth@redhat.com>
 
 	* config/m32r/m32r.c (move_src_operand): Fix 32-bit int test.
