--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-09  Richard Henderson  <rth@redhat.com>
+
+	* regrename.c (copy_value): Ignore the copy if the source register
+	is present in the value chain with a narrower mode.
+
 2002-01-09  Herman A.J. ten Brugge  <Haj.Ten.Brugge@net.HCC.nl>
 
         * real.c (c4xtoe, toc4x): Do some special conversion on long doubles
