--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-09  Richard Henderson  <rth@redhat.com>
 
+	* config/arm/arm.c (arm_gen_constant): Use trunc_int_for_mode.
+	Unify code from various alternatives.
+
+2002-01-09  Richard Henderson  <rth@redhat.com>
+
 	* regrename.c (copy_value): Ignore the copy if the source register
 	is present in the value chain with a narrower mode.
 
