--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan  9 14:03:20 2002  Jeffrey A Law  (law@redhat.com)
+
+	* gcc.c-torture/execute/strct-stdarg-1.x: New file.  Expect
+	execution failure on PA targets.
+
 2002-01-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20020109-1.c: New test.
