--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-09  Jan Hubicka  <jh@suse.cz>
+
+	* gcse.c (cprop_jump): Delete insn if simplified jump is no-op.
+
 2002-01-09  Richard Henderson  <rth@redhat.com>
 
 	* config/arm/arm.c (arm_gen_constant): Use trunc_int_for_mode.
