* config/vax/vax.h (REAL_ARITHMETIC): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48696 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -2,6 +2,8 @@
 
 	* config/vax/vax.c (vax_rtx_cost): Never abort.
 
+	* config/vax/vax.h (REAL_ARITHMETIC): Define.
+
 2002-01-09  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (cprop_jump): Delete insn if simplified jump is no-op.
