* gcc.c-torture/execute/loop-10.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48698 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-09  Gwenole Beauchesne  <bgeauchesne@mandrakesoft.com>
+
+	* gcc.c-torture/execute/loop-10.c: New test.
+
 2002-01-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20010226-1.c: New test.
