* gcc.dg/asm-fs-1.c: Disable warnings when compiling.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48699 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -22,6 +22,8 @@
 
 Wed Jan  9 14:03:20 2002  Jeffrey A Law  (law@redhat.com)
 
+	* gcc.dg/asm-fs-1.c: Disable warnings when compiling.
+
 	* gcc.c-torture/execute/strct-stdarg-1.x: New file.  Expect
 	execution failure on PA targets.
 
