--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan  9 16:48:33 2002  Alan Matsuoka  (alanm@redhat.com)
+
+	* gcc.c-torture/compile/20020109-2.c: New test.
+
 2002-01-09  Gwenole Beauchesne  <bgeauchesne@mandrakesoft.com>
 
 	* gcc.c-torture/execute/loop-10.c: New test.
