* rtlanal.c (find_reg_fusage): Use XEXP instead of SET_DEST 	to extract items in the expr_list chain.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48702 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-09  Kazu Hirata  <kazu@hxi.com>
+
+	* rtlanal.c (find_reg_fusage): Use XEXP instead of SET_DEST
+	to extract items in the expr_list chain.
+
 2002-01-09  Richard Henderson  <rth@redhat.com>
 
 	* config/vax/vax.c (vax_rtx_cost): Never abort.
