--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-10  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config/mmix/mmix.c (mmix_asm_identify_gcc): Remove unused
+	function.
+	* config/mmix/mmix-protos.h (mmix_asm_identify_gcc): Don't
+	prototype.
+	* config/mmix/mmix.c (ASM_IDENTIFY_GCC): Remove unused macro.
+
 2002-01-09  Kazu Hirata  <kazu@hxi.com>
 
 	* read-rtl.c: Fix formatting.
