--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-09  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.md (prologue_mcount): Remove lituse_jsr reloc.
+
 2002-01-10  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/mmix.c (mmix_asm_identify_gcc): Remove unused
