--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-08  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/altivec-4.c: Add test for mtvscr, dssall, mfvscr, 
+	dss, lvsl, lvsr, dstt, dstst, dststt, dst.
+
 2002-01-09  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/execute/20020108-1.c: Rewrite to choose the proper
