Fix typo in ChangeLog and actually commit mmix.h
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48710 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -37,7 +37,7 @@
 	function.
 	* config/mmix/mmix-protos.h (mmix_asm_identify_gcc): Don't
 	prototype.
-	* config/mmix/mmix.c (ASM_IDENTIFY_GCC): Remove unused macro.
+	* config/mmix/mmix.h (ASM_IDENTIFY_GCC): Remove unused macro.
 
 2002-01-09  Kazu Hirata  <kazu@hxi.com>
 
