--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-09  Zack Weinberg  <zack@codesourcery.com>
+
+	* Makefile.in (s-gencheck, s-options, s-specs): Handle an
+	empty list correctly.  Change loop index $t to $f for
+	consistency with rest of Makefile.
+
 2002-01-08  Aldy Hernandez  <aldyh@redhat.com>
 
 	* testuite/gcc.dg/altivec-4.c: Add test for mtvscr, dssall,
