--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-10  Kazu Hirata  <kazu@hxi.com>
+
+	* combine.c (can_combine_p): Fix a comment typo.
+
 2002-01-09  Zack Weinberg  <zack@codesourcery.com>
 
 	* Makefile.in (s-gencheck, s-options, s-specs): Handle an
