--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-10  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/alpha.md (extendsidi2_fix): Penalize f/f alternative.
+
+2002-01-10  Richard Henderson  <rth@redhat.com>
+
 	* regrename.c (find_oldest_value_reg): Fix typo in mode change check.
 	(copyprop_hardreg_forward_1): Likewise.  Use mode_change_ok.
 
