* spew.c (YYCHAR): Uppercase macro parameter and add         parenthesis.         (YYCODE): Likewise.         (NAME): Uppercase macro parameter.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48717 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-20  Graham Stott  <grahams@redhat.com>
+
+	* spew.c (YYCHAR): Uppercase macro parameter and add
+	parenthesis.
+	(YYCODE): Likewise.
+	(NAME): Uppercase macro parameter.
+
 2002-01-09  Graham Stott  <grahams@redhat.com>
 
 	* decl.h ( grokdeclarator): Wrap long line.
