* gcc.c-torture/execute/loop-11.c: New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48719 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-10  Dale Johannesen  <dalej@apple.com>
+
+	* gcc.c-torture/execute/loop-11.c: New.
+
 2002-01-08  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.dg/altivec-4.c: Add test for mtvscr, dssall, mfvscr, 
