--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 10 12:45:50 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* doc/cpp.texi: Document the __OBJC__ preprocessor macro.
+
 Thu Jan 10 11:19:18 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* optabs.c (expand_fix): Look for wider integer modes first.
