--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 10 16:39:58 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (sse_mov?fcc_const0_?): Fix constraints.
+
 Thu Jan 10 12:45:50 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* doc/cpp.texi: Document the __OBJC__ preprocessor macro.
