--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -16508,8 +16508,8 @@
 	(if_then_else:SF (match_operator 1 "sse_comparison_operator"
 			[(match_operand:SF 4 "register_operand" "0")
 			 (match_operand:SF 5 "nonimmediate_operand" "xm")])
-		      (match_operand:SF 2 "const0_operand" "x")
-		      (match_operand:SF 3 "register_operand" "X")))]
+		      (match_operand:SF 2 "const0_operand" "X")
+		      (match_operand:SF 3 "register_operand" "x")))]
   "TARGET_SSE"
   "#")
 
@@ -16528,8 +16528,8 @@
 	(if_then_else:SF (match_operator 1 "fcmov_comparison_operator"
 			[(match_operand:SF 4 "nonimmediate_operand" "xm")
 			 (match_operand:SF 5 "register_operand" "0")])
-		      (match_operand:SF 2 "const0_operand" "x")
-		      (match_operand:SF 3 "register_operand" "X")))]
+		      (match_operand:SF 2 "const0_operand" "X")
+		      (match_operand:SF 3 "register_operand" "x")))]
   "TARGET_SSE"
   "#")
 
@@ -16548,8 +16548,8 @@
 	(if_then_else:SF (match_operator 1 "sse_comparison_operator"
 			[(match_operand:SF 4 "register_operand" "0")
 			 (match_operand:SF 5 "nonimmediate_operand" "xm")])
-		      (match_operand:SF 2 "const0_operand" "x")
-		      (match_operand:SF 3 "register_operand" "X")))]
+		      (match_operand:SF 2 "const0_operand" "X")
+		      (match_operand:SF 3 "register_operand" "x")))]
   "TARGET_SSE2"
   "#")
 
@@ -16568,8 +16568,8 @@
 	(if_then_else:SF (match_operator 1 "fcmov_comparison_operator"
 			[(match_operand:SF 4 "nonimmediate_operand" "xm")
 			 (match_operand:SF 5 "register_operand" "0")])
-		      (match_operand:SF 2 "const0_operand" "x")
-		      (match_operand:SF 3 "register_operand" "X")))]
+		      (match_operand:SF 2 "const0_operand" "X")
+		      (match_operand:SF 3 "register_operand" "x")))]
   "TARGET_SSE2"
   "#")
 
